[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-profile-scraper"
version = "0.1.0"
description = "Python SDK for the TikTok Profile Scraper Apify actor — real-time TikTok profile data (followers, likes, videos, bio, verification) with creator-tier and engagement-rate signals. No TikTok API key required."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "tiktok", "tiktok-scraper", "tiktok-api", "tiktok-profile-scraper",
    "tiktok-followers-api", "tiktok-stats-api", "tiktok-bio-scraper",
    "tiktok-without-api-key", "tiktok-no-key",
    "influencer-marketing", "influencer-discovery", "creator-tier",
    "engagement-rate-api", "social-media-scraper", "social-media-analytics",
    "creator-economy", "ugc-vetting", "brand-safety",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/tiktok-profile-scraper-python"
Documentation = "https://github.com/apivault-labs/tiktok-profile-scraper-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/tiktok-profile-scraper"
"Bug Tracker" = "https://github.com/apivault-labs/tiktok-profile-scraper-python/issues"

[tool.setuptools.packages.find]
include = ["tiktok_profile_scraper*"]
